# tone-nodes

./: .gitignore  README.md  bun.lockb  default.nix  flake.nix  happydom.ts  package-lock.json  package.json
.github/workflows/: publish.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/app/: page.tsx  store.ts
src/app/components/: BaseSynth.tsx  DistortionNode.tsx  FlowNode.tsx  MidiInputNode.tsx  ParamInput.tsx  SynthNode.tsx  SynthProps.tsx  Workspace.tsx  index.ts  instrument.tsx  visualizeMidi.tsx
src/app/utils/: midiListener.ts
test/components/: ParamInput.test.tsx
test/components/__snapshots__/: ParamInput.test.tsx.snap
