[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.71"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.9", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-rc.10", features = [] }

[target.'cfg(not(target_os = "android"))'.dependencies]
midir = { version = "0.10.0" }

# On Android, do not include midir
[target.'cfg(target_os = "android")'.dependencies]
midir = { version = "0.10.0", optional = true }
